wordpress/wordpress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: apps

---
apiVersion: v1
kind: Namespace
metadata:
  name: dbs

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - image: wordpress:latest
        name: wordpress
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: apps
spec:
  selector:
    app: wordpress
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: dbs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:8.0
        name: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-db-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: dbs
spec:
  selector:
    app: mysql
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
